# python-project-52

./: .codeclimate.yml  .gitignore  Makefile  README.md  codeclimate.yml  coverage.yml  db.sqlite3  pyproject.toml
task_manager/: json_loader.py  mixins.py  settings.py  test.py  test_setup.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  user.json  users.json
task_manager/fixtures/label/: create.json  label.json  update.json
task_manager/fixtures/status/: create.json  status.json
task_manager/fixtures/task/: create.json  task.json  update.json
task_manager/fixtures/user/: create.json  update.json  user.json
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_create.py  test_delete.py  test_update.py  test_view.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_create.py  test_delete.py  test_update.py  test_view.py
task_manager/tasks/: filters.py  forms.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/tests/: test_create.py  test_delete.py  test_filter.py  test_show.py  test_update.py  test_view.py
task_manager/templates/: Base.html  Index.html  base.html  footer.html  form.html  form_generic.html  index.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  label_list.html  (+1 more)
task_manager/users/: forms.py  tests.py  urls.py  views.py
(+21 files in other folders)
